Sources/sdk/sccda.h

typedef VTSYSPARAM VTHDOC, * VTLPHDOC;
typedef SCCERR  DAERR;
#define DAERR_OK                      SCCERR_OK
#define DAERR_ABORT                   SCCERR_ABORT
#define DA_PATHSIZE 1024
/* For tree file access, 8-9-99 */
typedef struct DATREENODEtag
{
    VTDWORD dwSize;
    VTDWORD dwNode;
    VTBYTE  szName[DA_PATHSIZE];
    VTDWORD dwFileSize;
    VTDWORD dwTime;
    VTDWORD dwFlags;
    VTDWORD dwCharSet;
} SCCDATREENODE, *PSCCDATREENODE;
typedef struct DATREENODELOCATORtag
{
    VTDWORD dwSize;           /* the size of the DATREENODELOCATOR structure */
    VTDWORD dwSpecialFlags;   /* the archive tree node special flag */
    VTDWORD dwData1;
    VTDWORD dwData2;
}SCCDATREENODELOCATOR, *PSCCDATREENODELOCATOR;
typedef struct DAFILESPECtag
{
    VTDWORD   dwSpecType;
    VTLPVOID  pSpec;
    VTHANDLE  hThis;
} DAFILESPEC, * PDAFILESPEC;
/*
|  DAFILEFORMATTYPE enumeration
*/
typedef enum DAFILEFORMATTYPEtag
	{
	DAFORMAT_UNKNOWN = 0,  /* Unknown format */
	DAFORMAT_WP = 1,       /* Word processor */
	DAFORMAT_SS = 2,       /* Spreadsheet */
	DAFORMAT_DB = 3,       /* Database */
	DAFORMAT_IM = 5,       /* Bitmap image */
	DAFORMAT_AR = 6,       /* Archive */
	DAFORMAT_DR = 7,       /* Vector Drawing */
	DAFORMAT_PR = 8,       /* Presentation */
	DAFORMAT_CH = 9,       /* Chart */
	DAFORMAT_MM = 10,      /* Multimedia */

	DAFORMAT_MULTIPLE = 98,    /* File supports multiple file types */
	DAFORMAT_OTHER    = 99     /* A format not otherwise listed */
	} DAFILEFORMATTYPE;
/* 
|  DAGetObjectInfo and DAGetOutputObjectInfo parameters
*/
#define DAOBJECT_NAME_A             1 /* Retrieves the name of the object, in 8-bit characters.  pInfo points to a buffer of size DA_PATHSIZE.                       */
#define DAOBJECT_NAME_W             2 /* Retrieves the name of the object in Unicode characters.  pInfo points to a buffer of 16 bit characters of size DA_PATHSIZE. */
#define DAOBJECT_FORMATID           3 /* Retrieves the OIT file ID of the object.  pInfo points to a VTDWORD value.                                                  */
#define DAOBJECT_COMPRESSIONTYPE    4 /* Retrieves an identifier of the type of compression used to store the object, if known.  pInfo points to a VTDWORD value.    */
#define DAOBJECT_FLAGS              5 /* Retrieves a bitfield of flags indicating additional attributes of the object.  pInfo points to a VTDWORD value.             */
#define DAOBJECT_OBJECTTYPE         6 /* Type of object                                                                                                              */
#define DAOBJECT_FORMATTYPE         7 /* File format type (see DAFILEFORMATTYPE enum)                                                                                */
#define DAOBJECT_COMMONEXTENSION_A  8 /* Commonly used filename extension for this file format in 8-bit characters.                                                  */
#define DAOBJECT_COMMONEXTENSION_W  9 /* Commonly used filename extension for this file format in Unicode characters.                                                */
/* Flags for DAGetObjectInfo( DAOBJECT_FLAGS ) */
#define DAOBJECTFLAG_PARTIALFILE       0x00000001 /* Object would not normally exist outside the source document */
#define DAOBJECTFLAG_PROTECTEDFILE     0x00000002 /* Object is encrypted or password protected                   */
#define DAOBJECTFLAG_UNSUPPORTEDCOMP   0x00000004 /* Object uses an unsupported compression mechanism            */
#define DAOBJECTFLAG_DRMFILE           0x00000008 /* Object uses Digital Rights Management protection            */
#define DAOBJECTFLAG_UNIDENTIFIEDFILE  0x00000010 /* Object is extracted, but can not successfully identified    */
#define DAOBJECTFLAG_LINKTOFILE        0x00000020 /* Object links to file, it can not be extracted               */
#define DAOBJECTFLAG_ARCKNOWNENCRYPT   0x00000040 /* Object is encrypted and can be decryped with the known password  */
/*
|  DA Component types
|  Used in calls to DAAddPipelineComponent, DAGetCurrentPipelineComponentType
|    DAGetPipelineComponent, and DAOpenPipelineComponent
*/
#define DACOMP_UNKNOWN          0xC000   /* Unknown/any component type */
#define DACOMP_HIOFILE          0xC001   /* SCCIO (HIOFILE) */
#define DACOMP_SOFILTER         0xC002   /* SO Filter (HFILTER) */
#define DACOMP_EXFILTER         0xC003   /* Export filter */
#define DACOMP_PASSIVECOMPONENT 0xC004   /* Passive component filter (HCOMPONENT) */
#define DACOMP_ACTIVECOMPONENT  0xC005   /* Active component filter (HCOMPONENT) */
#define DACOMP_CHUNKER          0xC006   /* Standard chunker (HCHUNKER) */
#define DACOMP_XCHUNKER         0xC007   /* XChunker (HCHUNKER)*/
#define DACOMP_FILESPEC         0xC008   /* I/O Spec/spec type (PDAFILESPEC)*/
#define DACOMP_XTREE            0xC009   /* XTree (HXTREE) */
/*
|  DA Component flags
|  Used in calls to DAAddPipelineComponent
*/
#define DACOMPF_CLOSEHANDLE  0x00000001 /* Set if component handle should be closed on DACloseDocument */
#define DACOMPF_FREEHANDLE   0x00000002 /* Set if component handle should be freed on DACloseDocument (by calling UTGlobalFree) */
/*
|  DAGetFileInfoEx() flags
*/
#define DA_FILEINFO_RAWFI 0x00000001
/*
|  DA Internal flags
*/
#define DAOLE_COPYSTORAGE_DOTEMPFILE 0x01
#define DAOLE_COPYSTORAGE_DOUSERFILE 0x02
/*
|  Additional flags for DAOpenDocument
*/
#define DAOPENDOCUMENT_CONTINUEONFAILURE   0x80000000   /* Return a valid VTHDOC that can be used to obtain information */
                                                        /* about a document even if a failure occurs.                   */
                                                        /* Currently used by DAGetObjectInfo                            */ 
#define DAOPENDOCUMENT_ARCHIVEONLYMODE     0x04000000   /* When the flag is set, only archive document can be opened    */
                                                        /* All other file formats will return an error                  */

/* File Access callback function signature */
typedef VTDWORD (DA_ENTRYMODPTR DAFILEACCESSCALLBACKFN)(VTDWORD dwID, VTSYSVAL pRequestData, VTSYSVAL pReturnData, VTDWORD dwReturnDataSize);
#define OIT_FILEACCESS_PASSWORD  1
#define OIT_FILEACCESS_NOTESID   2
/* The sig of the UT status callback function */
typedef VTDWORD (DA_ENTRYMODPTR DASTATCALLBACKFN)(VTHANDLE hUnique, VTDWORD dwID, VTSYSVAL pCallbackData, VTSYSVAL pAppData);
	 /* 
	  |  Defines for DA status callback
     */
#define OIT_STATUS_WORKING		0
#define OIT_STATUS_CONTINUE		DAERR_OK
#define OIT_STATUS_CANCEL		SCCERR_CANCEL
#define OIT_STATUS_ABORT		DAERR_ABORT
#define DASTAT_WORKING              0
/*
|  P R O T O T Y P E S
*/

DA_ENTRYSC DAERR DA_ENTRYMOD DAInit(VTVOID);
DA_ENTRYSC VTLONG DA_ENTRYMOD DAThreadInitExt(
                    VTLONG (*Lock)(VTVOID *), VTLONG (*Unlock)(VTVOID *));
DA_ENTRYSC VTLONG DA_ENTRYMOD DAThreadInit(VTSHORT ThreadOption);
DA_ENTRYSC DAERR DA_ENTRYMOD DADeInit(VTVOID);
DA_ENTRYSC DAERR DA_ENTRYMOD DAOpenDocument( 
            VTLPHDOC phDoc, VTDWORD  dwSpecType, VTLPVOID pSpec, VTDWORD  dwFlags);
DA_ENTRYSC DAERR DA_ENTRYMOD DAOpenNextDocument( 
            VTHDOC hDoc, VTDWORD  dwSpecType, VTLPVOID pSpec, VTDWORD  dwFlags);
DA_ENTRYSC DAERR DA_ENTRYMOD DACloseDocument(VTHDOC hDoc);
DA_ENTRYSC DAERR DA_ENTRYMOD DARetrieveDocHandle(VTHDOC hItem, VTLPHDOC phDoc);
DA_ENTRYSC DAERR DA_ENTRYMOD DASetOption(
            VTHDOC hItem, VTDWORD dwOptionId, VTLPVOID pValue, VTDWORD dwSize);
DA_ENTRYSC DAERR DA_ENTRYMOD DASetFileSpecOption( 
            VTHDOC hItem, VTDWORD dwOptionId, VTDWORD dwType, VTVOID * pSpec);
DA_ENTRYSC DAERR DA_ENTRYMOD DAGetOption(
            VTHDOC hItem, VTDWORD dwOptionId, VTLPVOID pValue, VTLPDWORD pSize);
DA_ENTRYSC DAERR DA_ENTRYMOD DAGetFileId(VTHDOC hItem, VTLPDWORD pdwFileId);
DA_ENTRYSC DAERR DA_ENTRYMOD DAGetFileIdEx(VTHDOC hItem, VTLPDWORD pdwFileId, VTDWORD dwFlags);
DA_ENTRYSC VTVOID DA_ENTRYMOD DAGetErrorString(DAERR deError, VTLPVOID pBuffer, VTDWORD dwSize);
DA_ENTRYSC DAERR DA_ENTRYMOD DAGetTreeCount(VTHDOC hDoc, VTLPDWORD lpRecordCount);
DA_ENTRYSC DAERR DA_ENTRYMOD DAGetTreeRecord(VTHDOC hDoc, PSCCDATREENODE pTreeRecord);
DA_ENTRYSC DAERR DA_ENTRYMOD DAOpenTreeRecord(VTHDOC hDoc, VTLPHDOC lphDoc, VTDWORD dwRecord);
DA_ENTRYSC DAERR DA_ENTRYMOD DAOpenRandomTreeRecord (VTHDOC hDoc, VTLPHDOC lphDoc, SCCDATREENODELOCATOR sTreeNodeLocator);
DA_ENTRYSC DAERR DA_ENTRYMOD DASaveTreeRecord(
            VTHDOC hDoc, VTDWORD dwRecord, VTDWORD dwSpecType, VTLPVOID pSpec, VTDWORD dwFlags);
DA_ENTRYSC DAERR DA_ENTRYMOD DASaveRandomTreeRecord(
            VTHDOC hDoc, SCCDATREENODELOCATOR sTreeNodeLocator, VTDWORD dwSpecType, VTLPVOID pSpec, VTDWORD dwFlags);
DA_ENTRYSC DAERR DA_ENTRYMOD DACloseTreeRecord(VTHDOC hDoc);
DA_ENTRYSC DAERR DA_ENTRYMOD DAGetObjectInfo( 
            VTHDOC hDoc, VTDWORD dwInfoId, VTLPVOID pInfo );
DA_ENTRYSC DAERR DA_ENTRYMOD DAGetOutputObjectInfo( 
            VTHDOC hDoc, VTDWORD dwOutputFileId, VTDWORD dwInfoId, VTLPVOID pInfo );
DA_ENTRYSC DAERR DA_ENTRYMOD DASaveInputObject( 
            VTHDOC hDoc, VTDWORD dwSpecType, VTLPVOID pSpec, VTDWORD dwFlags );
DA_ENTRYSC DAERR DA_ENTRYMOD DAOpenSubdocumentById( 
            VTHDOC hDoc, VTLPHDOC lphDoc, VTDWORD dwSubdocumentId, VTDWORD dwFlags );
DA_ENTRYSC DAERR DA_ENTRYMOD DASetStatCallback(DASTATCALLBACKFN pCallback, VTHANDLE hUnique, VTLPVOID pAppData);
DA_ENTRYSC DAERR DA_ENTRYMOD DASetFileAccessCallback(DAFILEACCESSCALLBACKFN pCallback);
/* defines for thread initialization.  Needed only for UNIX */
#define DATHREAD_INIT_PTHREADS  0
#define DATHREAD_INIT_NOTHREADS 1
#define DATHREAD_INIT_NATIVETHREADS 2
#define DATHREAD_INIT_SUCCESS 0
#define DATHREAD_INIT_FAILED  1
#define DATHREAD_INIT_ALREADY_CALLED 2