Sources/sccda.pas


  const
     DAOBJECT_NAME_A = 1;
  { Retrieves the name of the object in Unicode characters.  pInfo points to a buffer of 16 bit characters of size DA_PATHSIZE.  }
     DAOBJECT_NAME_W = 2;
  { Retrieves the OIT file ID of the object.  pInfo points to a VTDWORD value.                                                   }
     DAOBJECT_FORMATID = 3;
  { Retrieves an identifier of the type of compression used to store the object, if known.  pInfo points to a VTDWORD value.     }
     DAOBJECT_COMPRESSIONTYPE = 4;
  { Retrieves a bitfield of flags indicating additional attributes of the object.  pInfo points to a VTDWORD value.              }
     DAOBJECT_FLAGS = 5;
  { Type of object                                                                                                               }
     DAOBJECT_OBJECTTYPE = 6;
  { File format type (see DAFILEFORMATTYPE enum)                                                                                 }
     DAOBJECT_FORMATTYPE = 7;
  { Commonly used filename extension for this file format in 8-bit characters.                                                   }
     DAOBJECT_COMMONEXTENSION_A = 8;
  { Commonly used filename extension for this file format in Unicode characters.                                                 }
     DAOBJECT_COMMONEXTENSION_W = 9;
  { Flags for DAGetObjectInfo( DAOBJECT_FLAGS )  }
  { Object would not normally exist outside the source document  }
     DAOBJECTFLAG_PARTIALFILE = $00000001;
  { Object is encrypted or password protected                    }
     DAOBJECTFLAG_PROTECTEDFILE = $00000002;
  { Object uses an unsupported compression mechanism             }
     DAOBJECTFLAG_UNSUPPORTEDCOMP = $00000004;
  { Object uses Digital Rights Management protection             }
     DAOBJECTFLAG_DRMFILE = $00000008;
  { Object is extracted, but can not successfully identified     }
     DAOBJECTFLAG_UNIDENTIFIEDFILE = $00000010;
  { Object links to file, it can not be extracted                }
     DAOBJECTFLAG_LINKTOFILE = $00000020;
  { Object is encrypted and can be decryped with the known password   }
     DAOBJECTFLAG_ARCKNOWNENCRYPT = $00000040;
  {
  |  DA Component types
  |  Used in calls to DAAddPipelineComponent, DAGetCurrentPipelineComponentType
  |    DAGetPipelineComponent, and DAOpenPipelineComponent
   }
  { Unknown/any component type  }
     DACOMP_UNKNOWN = $C000;     
  { SCCIO (HIOFILE)  }
     DACOMP_HIOFILE = $C001;     
  { SO Filter (HFILTER)  }
     DACOMP_SOFILTER = $C002;     
  { Export filter  }
     DACOMP_EXFILTER = $C003;     
  { Passive component filter (HCOMPONENT)  }
     DACOMP_PASSIVECOMPONENT = $C004;     
  { Active component filter (HCOMPONENT)  }
     DACOMP_ACTIVECOMPONENT = $C005;     
  { Standard chunker (HCHUNKER)  }
     DACOMP_CHUNKER = $C006;     
  { XChunker (HCHUNKER) }
     DACOMP_XCHUNKER = $C007;     
  { I/O Spec/spec type (PDAFILESPEC) }
     DACOMP_FILESPEC = $C008;     
  { XTree (HXTREE)  }
     DACOMP_XTREE = $C009;     
  {
  |  DA Component flags
  |  Used in calls to DAAddPipelineComponent
   }
  { Set if component handle should be closed on DACloseDocument  }
     DACOMPF_CLOSEHANDLE = $00000001;     
  { Set if component handle should be freed on DACloseDocument (by calling UTGlobalFree)  }
     DACOMPF_FREEHANDLE = $00000002;     
  {
  |  DAGetFileInfoEx() flags
   }
     DA_FILEINFO_RAWFI = $00000001;
  {
  |  DA Internal flags
   }
     DAOLE_COPYSTORAGE_DOTEMPFILE = $01;
     DAOLE_COPYSTORAGE_DOUSERFILE = $02;
  {
  |  Additional flags for DAOpenDocument
   }
  { Return a valid VTHDOC that can be used to obtain information  }
     DAOPENDOCUMENT_CONTINUEONFAILURE = $80000000;
  { about a document even if a failure occurs.                    }
  { Currently used by DAGetObjectInfo                             }  { When the flag is set, only archive document can be opened     }
     DAOPENDOCUMENT_ARCHIVEONLYMODE = $04000000;
  { All other file formats will return an error                   }
  { File Access callback function signature  }

  type

     DAFILEACCESSCALLBACKFN = function (dwID:VTDWORD; pRequestData:VTSYSVAL; pReturnData:VTSYSVAL; dwReturnDataSize:VTDWORD):VTDWORD;cdecl;
  { - defines for file access callback  }
{$ifndef SCCVW_H}

  const
     OIT_FILEACCESS_PASSWORD = 1;
     OIT_FILEACCESS_NOTESID = 2;     
{$endif}
  { The sig of the UT status callback function  }

  type

     DASTATCALLBACKFN = function (hUnique:VTHANDLE; dwID:VTDWORD; pCallbackData:VTSYSVAL; pAppData:VTSYSVAL):VTDWORD;cdecl;
{$ifndef SCCVW_H}
  { 
  	  |  Defines for DA status callback
        }

  const
     OIT_STATUS_WORKING = 0;     
     OIT_STATUS_CONTINUE = DAERR_OK;     
     OIT_STATUS_CANCEL = SCCERR_CANCEL;     
     OIT_STATUS_ABORT = DAERR_ABORT;     
{$endif}

  const
     DASTAT_WORKING = 0;     
  {
  |  P R O T O T Y P E S
   }
type
  TCallbackFunction = function (_para1:PVTVOID):VTLONG;

  function DAInit:DAERR;cdecl;                     external External_library name 'DAInit';
  function DAThreadInitExt(Lock, Unlock: TCallbackFunction):VTLONG;cdecl;external External_library name 'DAThreadInitExt';
  function DAThreadInit(ThreadOption:VTSHORT):VTLONG;cdecl;external External_library name 'DAThreadInit';
  function DADeInit:DAERR;cdecl;external External_library name 'DADeInit';
  function DAOpenDocument(phDoc:VTLPHDOC; dwSpecType:VTDWORD; pSpec:VTLPVOID; dwFlags:VTDWORD):DAERR;cdecl;external External_library name 'DAOpenDocument';
  function DAOpenNextDocument(hDoc:VTHDOC; dwSpecType:VTDWORD; pSpec:VTLPVOID; dwFlags:VTDWORD):DAERR;cdecl;external External_library name 'DAOpenNextDocument';
  function DACloseDocument(hDoc:VTHDOC):DAERR;cdecl;external External_library name 'DACloseDocument';
  function DARetrieveDocHandle(hItem:VTHDOC; phDoc:VTLPHDOC):DAERR;cdecl;external External_library name 'DARetrieveDocHandle';
  function DASetOption(hItem:VTHDOC; dwOptionId:VTDWORD; pValue:VTLPVOID; dwSize:VTDWORD):DAERR;cdecl;external External_library name 'DASetOption';
  function DASetFileSpecOption(hItem:VTHDOC; dwOptionId:VTDWORD; dwType:VTDWORD; pSpec:PVTVOID):DAERR;cdecl;external External_library name 'DASetFileSpecOption';
  function DAGetOption(hItem:VTHDOC; dwOptionId:VTDWORD; pValue:VTLPVOID; pSize:VTLPDWORD):DAERR;cdecl;external External_library name 'DAGetOption';
  function DAGetFileId(hItem:VTHDOC; pdwFileId:VTLPDWORD):DAERR;cdecl;external External_library name 'DAGetFileId';
  function DAGetFileIdEx(hItem:VTHDOC; pdwFileId:VTLPDWORD; dwFlags:VTDWORD):DAERR;cdecl;external External_library name 'DAGetFileIdEx';
  procedure DAGetErrorString(deError:DAERR; pBuffer:VTLPVOID; dwSize:VTDWORD);cdecl;external External_library name 'DAGetErrorString';
  function DAGetTreeCount(hDoc:VTHDOC; lpRecordCount:VTLPDWORD):DAERR;cdecl;external External_library name 'DAGetTreeCount';
  function DAGetTreeRecord(hDoc:VTHDOC; pTreeRecord:PSCCDATREENODE):DAERR;cdecl;external External_library name 'DAGetTreeRecord';
  function DAOpenTreeRecord(hDoc:VTHDOC; lphDoc:VTLPHDOC; dwRecord:VTDWORD):DAERR;cdecl;external External_library name 'DAOpenTreeRecord';
  function DAOpenRandomTreeRecord(hDoc:VTHDOC; lphDoc:VTLPHDOC; sTreeNodeLocator:SCCDATREENODELOCATOR):DAERR;cdecl;external External_library name 'DAOpenRandomTreeRecord';
  function DASaveTreeRecord(hDoc:VTHDOC; dwRecord:VTDWORD; dwSpecType:VTDWORD; pSpec:VTLPVOID; dwFlags:VTDWORD):DAERR;cdecl;external External_library name 'DASaveTreeRecord';
  function DASaveRandomTreeRecord(hDoc:VTHDOC; sTreeNodeLocator:SCCDATREENODELOCATOR; dwSpecType:VTDWORD; pSpec:VTLPVOID; dwFlags:VTDWORD):DAERR;cdecl;external External_library name 'DASaveRandomTreeRecord';
  function DACloseTreeRecord(hDoc:VTHDOC):DAERR;cdecl;external External_library name 'DACloseTreeRecord';
  function DAGetObjectInfo(hDoc:VTHDOC; dwInfoId:VTDWORD; pInfo:VTLPVOID):DAERR;cdecl;external External_library name 'DAGetObjectInfo';
  function DAGetOutputObjectInfo(hDoc:VTHDOC; dwOutputFileId:VTDWORD; dwInfoId:VTDWORD; pInfo:VTLPVOID):DAERR;cdecl;external External_library name 'DAGetOutputObjectInfo';
  function DASaveInputObject(hDoc:VTHDOC; dwSpecType:VTDWORD; pSpec:VTLPVOID; dwFlags:VTDWORD):DAERR;cdecl;external External_library name 'DASaveInputObject';
  function DAOpenSubdocumentById(hDoc:VTHDOC; lphDoc:VTLPHDOC; dwSubdocumentId:VTDWORD; dwFlags:VTDWORD):DAERR;cdecl;external External_library name 'DAOpenSubdocumentById';
  function DASetStatCallback(pCallback:DASTATCALLBACKFN; hUnique:VTHANDLE; pAppData:VTLPVOID):DAERR;cdecl;external External_library name 'DASetStatCallback';
  function DASetFileAccessCallback(pCallback:DAFILEACCESSCALLBACKFN):DAERR;cdecl;external External_library name 'DASetFileAccessCallback';

// { defines for thread initialization.  Needed only for UNIX  }
//
//  const
//     DATHREAD_INIT_PTHREADS = 0;
//     DATHREAD_INIT_NOTHREADS = 1;
//     DATHREAD_INIT_NATIVETHREADS = 2;
//     DATHREAD_INIT_SUCCESS = 0;
//     DATHREAD_INIT_FAILED = 1;
//     DATHREAD_INIT_ALREADY_CALLED = 2;
//

implementation


end.
